fixed modal overflow issue

--- a/less/misc.less
+++ b/less/misc.less
@@ -1,5 +1,8 @@
 body {
-	overflow-y: scroll;
+	overflow-y: scroll !important;
+}
+.modal {
+	overflow-y: hidden;
 }
 
 img {
